<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mainpage_txt_header_margin_btm"
        android:text="@string/mainpage_title_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_header"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_spotofy"
            style="@style/MainPageButton"
            android:text="@string/btn_spotify_txt" />

        <Button
            android:id="@+id/btn_scores_app"
            style="@style/MainPageButton"
            android:text="@string/btn_scores_app_txt" />

        <Button
            android:id="@+id/btn_library_app"
            style="@style/MainPageButton"
            android:text="@string/btn_library_app_txt" />

        <Button
            android:id="@+id/btn_build_it_bigger"
            style="@style/MainPageButton"
            android:text="@string/btn_build_it_bigger_txt" />

        <Button
            android:id="@+id/btn_xyz_reader"
            style="@style/MainPageButton"
            android:text="@string/btn_xyz_reader_txt" />

        <Button
            android:id="@+id/btn_my_own_app"
            android:theme="@style/AppThemeAccent"
            style="@style/MainPageButton"
            android:text="@string/btn_my_app_txt"/>

    </LinearLayout>
</RelativeLayout>